# random-events

./: .gitignore  .gitmodules  .readthedocs.yaml  README  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  python-package.yml  test-and-build.yml
book/: _config.yml  _toc.yml  conceptual-guide.md  conceptual_guide.md  deploy.yml  quickstart.md  references.bib  technical_guide.md
doc/: _config.yml  _toc.yml  advanced_use.md  conceptual_guide.md  conf.py  index.rst  intro.md  references.bib  requirements.txt  technical_guide.md
doc/notebooks/: example.ipynb  independent_constraints.ipynb
docs/: _config.yml  _toc.yml  advanced_use.md  conceptual_guide.md  intro.md  polytope.md  quickstart.md  references.bib  requirements.txt  technical_guide.md
example/: example.ipynb  independent_constraints.ipynb
examples/: door.ipynb  example.ipynb  logo_generation.ipynb  product_spaces.ipynb  self_assessment.ipynb
src/random_events/: __init__.py  better_variables.py  events.py  flag.py  interval.py  polytope.py  product_algebra.py  set.py  sigma_algebra.py  utils.py  variable.py  variables.py
src/random_events/before_bindings/: interval_old.py  product_algebra_old.py  sigma_algebra_old.py  variable_old.py
test/: test_bindings.py  test_events.py  test_flag.py  test_interval.py  test_polytope.py  test_product_algebra.py  test_set.py  test_variable.py  test_variables.py
