[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "random_events"
authors = [
  { name="Tom Schierenbeck", email="tom_sch@uni-bremen.de" },
]
description = "Random random events for probabilistic reasoning"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords=["random events", "probabilistic machine learning", "probability theory", "variables",
    "reasoning under uncertainty"]
dynamic = ["version", "dependencies"]

[project.urls]
"Source" = 'https://github.com/tomsch420/random-events'
"Bug Tracker" = 'https://github.com/tomsch420/random-events/issues'

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["random_events*"]

[tool.setuptools.dynamic]
version = {attr = "random_events.__version__"}
dependencies = {file = "requirements.txt"}